--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,14 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-//    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-//    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//new
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //    testImplementation 'junit:junit:4.12'
+    //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //new
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-//    implementation 'com.google.firebase:firebase-database:16.0.4'
+    //    implementation 'com.google.firebase:firebase-database:16.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -45,5 +45,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
     implementation 'com.google.firebase:firebase-database:18.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-
+    implementation files('src/main/java/libs/picasso-2.3.2.jar')
+    implementation 'com.android.volley:volley:1.1.1'
 }
