--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
 
+    implementation 'com.iarcuschin:simpleratingbar:0.1.5'
+
 
     implementation 'com.android.support:design:28.0.0'
 
