--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddReview"></activity>
+        <activity android:name=".Profolio"></activity>
+        <activity android:name=".AddReview" />
         <activity android:name=".AddRestaurant" />
         <activity android:name=".Comment_res" />
         <activity android:name=".Dish" />
