--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,19 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.google.com' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath 'com.google.gms:google-services:4.2.0'
+//        classpath 'com.google.gms:google-services:4.2.0'  // Google Services plugin
+        // Add dependency
+        classpath 'io.fabric.tools:gradle:1.29.0'  // Crashlytics plugin
+        classpath 'com.google.firebase:perf-plugin:1.3.0'
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,7 +26,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
