--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
-    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
+
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.appcompat:appcompat:1.0.0'
@@ -67,6 +68,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     //new
-
-
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+//    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
