--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,23 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        //new
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    //new
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 }
 
@@ -78,6 +89,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:18.0.0'
     implementation 'com.google.firebase:firebase-ml-model-interpreter:20.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
 //    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
 //    implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
 //    implementation 'com.google.firebase:firebase-ml-model-interpreter:18.0.0'
