--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     //new
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -61,7 +62,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:19.0.1'
     implementation 'com.google.firebase:firebase-database:18.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation files('src/main/java/libs/picasso-2.3.2.jar')
+
+//    implementation files('src/main/java/libs/picasso-2.3.2.jar')
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.google.android.material:material:1.0.0'
@@ -90,6 +92,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:18.0.0'
     implementation 'com.google.firebase:firebase-ml-model-interpreter:20.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
+
+    //ads
+//    implementation 'com.google.firebase:firebase-ads:17.2.0'
 //    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
 //    implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
 //    implementation 'com.google.firebase:firebase-ml-model-interpreter:18.0.0'
