--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>-->
-    <!--<uses-permission android:name="android.permission.INTERNET"/>-->
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
-    <!--<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
-
-    <!--<uses-permission android:name="android.permission.CAMERA"/>-->
-    <!--<uses-feature android:name="android.hardware.camera.autofocus" />-->
-    <!--<uses-feature android:name="android.hardware.camera" android:required="true" />-->
 
     <application
         android:allowBackup="true"
@@ -20,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Social"></activity>
+        <activity android:name=".ResType"></activity>
+        <activity android:name=".Social" />
         <activity android:name=".Profolio" />
         <activity android:name=".AddReview" />
         <activity android:name=".AddRestaurant" />
@@ -45,12 +38,14 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".login" />
-        <activity android:name=".ShowRes" >
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
+        <activity android:name=".ShowRes">
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
 
         <service android:name=".firebaseSDK.Firebase_Cloud_Message">
@@ -81,12 +76,10 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
-            android:value="ocr"/>
-        <!--<meta-data-->
-            <!--android:name="com.google.firebase.ml.vision.DEPENDENCIES"-->
-            <!--android:value="label" />-->
+            android:value="ocr" />
     </application>
 
 </manifest>
