--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.example.initapp"
         minSdkVersion 20
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         //new
@@ -93,6 +93,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-model-interpreter:20.0.0'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-ads:18.1.1'
 
     //ads
 //    implementation 'com.google.firebase:firebase-ads:17.2.0'
